--- a/ios/BulletTime/Base.lproj/Shoot.storyboard
+++ b/ios/BulletTime/Base.lproj/Shoot.storyboard
@@ -934,7 +934,7 @@
                     <toolbarItems/>
                     <nil key="simulatedStatusBarMetrics"/>
                     <nil key="simulatedTopBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="diN-Vo-rGf">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="diN-Vo-rGf">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
